fix: radio "other" align

--- a/frontend/src/styles/forms.scss
+++ b/frontend/src/styles/forms.scss
@@ -44,6 +44,7 @@ input[type='reset'] {
   grid-template-columns: 1em auto;
   gap: 0.7em;
   margin-top: 1em;
+  align-items: center;
 
   margin-right: 0.8em;
   @include media.for-phone-only {
